--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -102,6 +102,12 @@
     border:none;
     background-color: green;
     color:white;
+    cursor: pointer;
+}
+
+#Chat-message-submit-btn:disabled {
+    background-color: black;
+    cursor: default;
 }
 
 #Chat-chatroom-desc-content-container {
