--- a/src/pages/chat.css
+++ b/src/pages/chat.css
@@ -328,9 +328,114 @@
     box-sizing: border-box;
     width: 100%;
     height: 80%;
+    
+  }
+
+  .ChatRoomsPopUp-title {
+    margin: auto;
+  }
+
+  #ChatRoomsPopUp-textAreaField {
+    height: 50%;
+    margin: auto 20px;
+    padding-left: 5px;
+  }
+  
+  #ChatRoomsPopUp-inputField {
+    height: 20%;
+    padding-left: 5px;
+    margin: auto 20px;
+  }
+
+  .ChatRoomsPopUp-main-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    width: 100%;
+    height: 100%;
+  }
+
+  #ChatRoomsPopUp-button-container {
+    box-sizing: border-box;
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #ChatRoomsPopUp-submit {
+    padding: 20px;
+    border: none;
+    color:white;
+    background-color: green;
+  }
+
+  .ServerCard-container {
+    box-sizing: border-box;
+    height: 200px;
+    width: 200px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:20px;
+    border: 1px solid;
   }
+
+  .ServerCard-container h1 {
+    font-size: 20px;
+    margin: 0px auto;
+  }
+
+  .ServerCard-container p {
+    display: -webkit-box;
+    padding-left: 10px;
+    width: 100%;
+    text-overflow: ellipsis; 
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 4;
+  }
+
+.ServerCard-container button {
+    box-sizing: border-box;
+    height: 40px;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    background-color: blue;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.ChatRoomsPopUp-results-container {
+    display: flex;
+    height: 70%;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    gap:5px;
+    padding-left: 5px;
+    padding-right: 5px;
+
+    
+}
+
+#ChatRoomsPopUp-close-btn {
+    position: absolute;
+    top:70px;
+    right:20px;
+    color: white;
+    background-color: red;
+    border: none;
+    width: 70px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.ChatRoomsPopUp-error-border {
+    border-color: red;
+}
+
+#ChatRoomsPopUp-error-text {
+    font-size: small;
+    color: red;
+}
